// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Expenses sumary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render Expenses sumary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $124,365.24
  </h1>
</div>
`;
